[package]
name = "littlebigmouse-hook"
version = "0.1.0"
edition = "2021"
description = "Little Big Mouse hook daemon (Rust port of LittleBigMouse.Hook)"
license = "GPL-3.0-only"

# The C# UI locates and launches the daemon strictly by the exe name
# "LittleBigMouse.Hook.exe" (LittleBigMouseClientService.FindHookPath /
# GetProcessesByName). Cargo cannot emit a target whose name contains '.', so the
# binary is built as `lbm-hook.exe` and renamed to `LittleBigMouse.Hook.exe`
# during staging/packaging (Phase 5 — the CI copy step already does this).
[[bin]]
name = "lbm-hook"
path = "src/main.rs"

[lib]
name = "littlebigmouse_hook"
path = "src/lib.rs"

[dependencies]
roxmltree = "0.20"
slotmap = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Power",
]

[profile.release]
lto = true
codegen-units = 1
strip = true

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["xinput", "randr"] }
ashpd = { version = "0.13", default-features = false, features = ["tokio", "input_capture", "tracing"] }
reis = { version = "0.7", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros", "time", "net", "sync"] }
futures = "0.3"
# Portal signal diagnostics: ashpd traces every InputCapture signal it receives
# (and, crucially, bodies it fails to deserialize and silently drops).
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
