[package]
name = "littlebigmouse-hook"
version = "0.1.0"
edition = "2021"
description = "Little Big Mouse hook daemon (Rust port of LittleBigMouse.Hook)"
license = "GPL-3.0-only"

# The C# UI locates and launches the daemon strictly by the exe name
# "LittleBigMouse.Hook.exe" (LittleBigMouseClientService.FindHookPath /
# GetProcessesByName). Cargo cannot emit a target whose name contains '.', so the
# binary is built as `lbm-hook.exe` and renamed to `LittleBigMouse.Hook.exe`
# during staging/packaging (Phase 5 — the CI copy step already does this).
[[bin]]
name = "lbm-hook"
path = "src/main.rs"

# Native-Wayland fullscreen bitmap viewer: pixel-perfect test patterns on every
# output (the Avalonia windows go through XWayland, which KWin rescales on any
# screen whose scale differs from the global factor). Linux-only, stub elsewhere.
[[bin]]
name = "lbm-pattern"
path = "src/bin/lbm-pattern.rs"

[lib]
name = "littlebigmouse_hook"
path = "src/lib.rs"

[dependencies]
roxmltree = "0.20"
slotmap = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_RemoteDesktop",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Power",
]

[profile.release]
lto = true
codegen-units = 1
strip = true

[target.'cfg(target_os = "linux")'.dependencies]
# Preferred Wayland (and X11) backend: grab the physical mice and re-inject a
# corrected stream through a uinput virtual pointer — LBM is the sole router,
# like the Windows hook. No portal, no capture notification, no round-trip.
evdev = "0.13"
x11rb = { version = "0.13", features = ["xinput", "randr"] }
ashpd = { version = "0.13", default-features = false, features = ["tokio", "input_capture", "tracing"] }
# Already in the tree through ashpd; used directly by the evdev backend to ask
# KWin for the real cursor position (scripting API) when arming.
zbus = { version = "5", default-features = false, features = ["tokio"] }
reis = { version = "0.7", features = ["tokio"] }
futures = "0.3"
# Portal signal diagnostics: ashpd traces every InputCapture signal it receives
# (and, crucially, bodies it fails to deserialize and silently drops).
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
# lbm-pattern: bare Wayland client (wl_shm buffer + xdg_toplevel fullscreen +
# wp_viewport so the native-resolution buffer maps 1:1 to the panel).
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
png = "0.17"

# wayland-scanner 0.31.10 still declares quick-xml 0.39, which is affected by
# RUSTSEC-2026-0194 and RUSTSEC-2026-0195. This upstream commit is the minimal
# dependency-only fix while a patched crates.io release is pending.
[patch.crates-io]
wayland-scanner = { git = "https://github.com/Smithay/wayland-rs", rev = "d07c4f91f28b42e5a485823ffd9d8d5a210b1053" }
